crates/es-fluent-derive/tests/ui/bad_optional_field.stderr
error: Attribute error in message field: #[fluent(optional)] can only be used on Option<T> fields
 --> tests/ui/bad_optional_field.rs:7:5
  |
7 |     #[fluent(optional)]
  |     ^
